==> mshakeri63/IoT-Libraries/STM32/AS3935/AS3935.c <==
#include "AS3935.h"
#include "stdint.h"
#include "stdio.h"
#include "stm32wbxx_hal.h"
#include "string.h"
#include "main.h"
#include "stm32wbxx_hal_uart.h"
#include "stm32wbxx_hal_spi.h"

uint8_t readInterruptReg()
{
    // A 2ms delay is added to allow for the memory register to be populated
    // after the interrupt pin goes HIGH. See "Interrupt Management" in
    // datasheet.
    HAL_Delay(2);

    uint8_t _interValue;
    _interValue = _readRegister(INT_MASK_ANT);
    _interValue &= INT_MASK;

    return (_interValue);
}

bool calibrateOsc()
{

    _writeRegister(CALIB_RCO, WIPE_ALL, DIRECT_COMMAND, 0); // Send command to calibrate the oscillators
   // Serial.println("Calibrating Oscillators");
    UART_Log("Calibrating Oscillators\r\n");

    displayOscillator(true, 2);
    HAL_Delay(2); // Give time for the internal oscillators to start up.
    displayOscillator(false, 2);

    // Check it they were calibrated successfully.
    uint8_t regValSrco = _readRegister(CALIB_SRCO);
    uint8_t regValTrco = _readRegister(CALIB_TRCO);

    regValSrco &= CALIB_MASK;
    regValSrco >>= 6;
    regValTrco &= CALIB_MASK;
    regValTrco >>= 6;

    if (!regValSrco && !regValTrco) // Zero upon success
        return true;
    else
        return false;
}
