==> witoldo7/RT-STM32F401C-DONICZKA/drivers/as3935.c <==
#include "as3935.h"

static uint8_t readInterruptReg(void *ip)
{
	AS3935Driver *drvp = (AS3935Driver *)ip;
	chThdSleepMilliseconds(2);

	uint8_t _interValue;
	_interValue = readReg(drvp, INT_MASK_ANT);
	_interValue &= INT_MASK;

	return (_interValue);
}

static bool calibrateOsc(void *ip)
{
	AS3935Driver *drvp = (AS3935Driver *)ip;
	writeReg(drvp, CALIB_RCO, WIPE_ALL, DIRECT_COMMAND, 0); // Send command to calibrate the oscillators

	drvp->vmt->displayOscillator(drvp, true, 2);
	chThdSleepMilliseconds(2); // Give time for the internal oscillators to start up.
	drvp->vmt->displayOscillator(drvp, false, 2);

	// Check it they were calibrated successfully.
	uint8_t regValSrco = readReg(drvp, CALIB_SRCO);
	uint8_t regValTrco = readReg(drvp, CALIB_TRCO);

	regValSrco &= CALIB_MASK;
	regValSrco >>= 6;
	regValTrco &= CALIB_MASK;
	regValTrco >>= 6;

	if (!regValSrco && !regValTrco) // Zero upon success
		return true;
	else
		return false;
}
